--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.21.0"
-  },
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "express": "^4.21.0",
     "nodemon": "^3.1.7"
   }
 }
