--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/express": "^5.0.0",
     "express": "^4.21.0",
     "nodemon": "^3.1.7"
+  },
+  "dependencies": {
+    "express-handlebars": "^8.0.1"
   }
 }
