--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/uniqid": "^5.3.4",
     "express": "^4.21.0",
     "nodemon": "^3.1.7"
   },
   "dependencies": {
-    "express-handlebars": "^8.0.1"
+    "express-handlebars": "^8.0.1",
+    "uniqid": "^5.4.0"
   }
 }
