--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "dependencies": {
     "express-handlebars": "^8.0.1",
-    "mongoose": "^8.7.0",
-    "uniqid": "^5.4.0"
+    "mongoose": "^8.7.0"
   }
 }
